--- a/src/scss/_select.scss
+++ b/src/scss/_select.scss
@@ -77,8 +77,8 @@
     width: 0.5rem;
     height: 0.5rem;
     margin: 0;
-    top: 0.85rem;
-    right: 0.3rem;
+    top: 1.0625rem;
+    right: 0.5rem;
     border: 1px solid $colorPrimary;
     border-width: 0 0 1px 1px;
     transform: rotate(-45deg);
@@ -86,7 +86,7 @@
 
   .choices[data-type*=select-one].is-open::after {
     transform: rotate(135deg);
-    top: 1.2rem;
+    top: 1.375rem;
   }
 }
 
@@ -96,5 +96,36 @@
   }
 }
 
- 
+//  SELECT-CATEGORY
+.select-category {
+  width: 26.3rem;
+  // border: 2px solid $colorGreyLight;
 
+  .choices[data-type*=select-one]::after {
+    width: 0.5rem;
+    height: 0.5rem;
+    margin: 0;
+    top: 23px;
+    right: 32px;
+    border: 1px solid $colorPrimary;
+    border-width: 0 0 1px 1px;
+    transform: rotate(-45deg);
+  }
+
+  .choices[data-type*=select-one].is-open::after {
+    transform: rotate(135deg);
+    top: 27px;
+  }
+
+  .choices__list--single {
+    padding-top: 1.125rem;
+    padding-bottom: 1.0625rem;
+    padding-left: 1.875rem;
+  }
+
+  .choices__list--dropdown {
+    .choices__item--selectable[data-value="1"] {
+      display: none;
+    }
+  }
+}
