--- a/src/scss/fonts/_fonts.scss
+++ b/src/scss/fonts/_fonts.scss
@@ -1,3 +1,4 @@
 @include font-face('Open Sans', 'opensans-regular', 400, normal);
 @include font-face('Open Sans', 'opensans-semibold', 600, normal);
 @include font-face('Open Sans', 'opensans-bold', 700, normal);
+@include font-face('Playfair Display', 'playfairdisplay-black', 900, normal);
