--- a/src/scss/_validate.scss
+++ b/src/scss/_validate.scss
@@ -1,9 +1,14 @@
 .just-validate-error-label {
   padding-left: 1rem;
-  padding-bottom: 0.4rem;
-  font-size: 0.75rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+  padding-bottom: 0.37rem;
+  @include text($mainFamily, 0.75rem, normal, 400, normal);
   color: $colorRedInput !important;
+}
+
+.just-validate-error-field.just-validate-error-field {
+  border-color: $colorRedInput;
+}
+
+.just-validate-success-field.just-validate-success-field {
+  border-color: $colorGreenInput;
 }
