--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -12,7 +12,7 @@
 // TITLES
 @mixin title-product {
   color: $colorBlack;
-  font-family: 'Open Sans', sans-serif;
+  font-family: $mainFamily;
   font-size: 1.5rem;
   font-style: normal;
   font-weight: 400;
@@ -20,16 +20,25 @@
 }
 
 @mixin price {
-  font-family: 'Open Sans', sans-serif;
+  font-family: $mainFamily;
   font-size: 1rem;
   font-style: normal;
   font-weight: 400;
   line-height: 130%;
 }
 
-// BUTTONS
-@mixin btn {
+@mixin text-normal {
+  font-family: $mainFamily;
+  font-style: normal;
+  font-weight: 400;
+}
 
+@mixin text($family, $size, $style, $weight, $height) {
+  font-family: $family;
+  font-size: $size;
+  font-style: $style;
+  font-weight: $weight;
+  line-height: $height;
 }
 
 // IS-VISIBLE
